* removed deprecated TimerTaskExecutionException
* added "jobSchedulingDataLocation" property to SchedulerFactoryBean, supporting Quartz 1.3's job definition XML files
* added "dataSource" property to SchedulerFactoryBean, for using a Spring-managed DataSource as Quartz job store
* added "overwriteExistingJobs" property to SchedulerFactoryBean, to control overwriting of persistent jobs

Package org.springframework.transaction
* added "PROPAGATION_NESTED" to TransactionDefinition, for specifying a nested transacton
* added SavepointManager interface as superinterface of TransactionStatus, for generic savepoint management
* DefaultTransactionStatus delegates to transaction object if the latter implements the SavepointManager interface
* AbstractPlatformTransactionManager applies "PROPAGATION_NESTED", invoking "doBegin" within an active transaction

Package org.springframework.util
* deprecated ResponseTimeMonitorImpl's "getUptime" method in favor of "getUptimeMillis"
* deprecated StopWatch's "getLastInterval"/"getTotalTime" in favor of "getLastTaskTimeMillis"/"getTotalTimeMillis"

Package org.springframework.validation
* added "rejectIfEmptyOrWhitespace" method to ValidationUtils, for rejecting if empty or just containing whitespace

Package org.springframework.web
* added IntrospectorCleanupListener to web.util package, for cleaning up JavaBeans Introspector leaks on shutdown
* added "getContextLoader" accessor to ContextLoaderListener and ContextLoaderServlet
* deprecated RequestHandledEvent's getURL/getTimeMillis/getIpAddress -> getRequestUrl/getProcessingTime/getClientAddress
* added optional "sessionId" and "userName" fields to RequestHandledEvent, for easier session and user tracking
* support multiple delimited URLs in ResourceServlet, including them one by one (and taking the latest file timestamp)
* added FixedLocaleResolver implementation, returning a given "defaultLocale" for any request